Фикс - общий запуск на windows и macos